--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "jwt-decode": "^3.1.2",
+    "material-ui-image": "^3.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
